[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/Misc/grabber.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/UI/Fonts/UI-Font10.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/UI/Controls.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=5]
[ext_resource path="res://Assets/UI/Fonts/TitleUI-Font8.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scripts/UI/Display.gd" type="Script" id=7]

[node name="Settings" type="CanvasLayer"]
layer = 2
script = ExtResource( 5 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -8.0

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
margin_right = 288.0
margin_bottom = 156.0

[node name="Tabs" type="TabContainer" parent="Margin/VBoxContainer"]
margin_right = 288.0
margin_bottom = 156.0
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Tabs" parent="Margin/VBoxContainer/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 23.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/VBoxContainer/Tabs/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -131.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="Margin/VBoxContainer/Tabs/Audio/VBoxContainer"]
margin_right = 147.0
margin_bottom = 40.0
size_flags_vertical = 3

[node name="Master" type="Label" parent="Margin/VBoxContainer/Tabs/Audio/VBoxContainer/HBoxContainer3"]
margin_top = 12.0
margin_right = 71.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Master"

[node name="MSlider" type="HSlider" parent="Margin/VBoxContainer/Tabs/Audio/VBoxContainer/HBoxContainer3"]
margin_left = 75.0
margin_top = 16.0
margin_right = 147.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 6
min_value = -72.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/VBoxContainer/Tabs/Audio/VBoxContainer"]
margin_top = 44.0
margin_right = 147.0
margin_bottom = 84.0
size_flags_vertical = 3

[node name="Music" type="Label" parent="Margin/VBoxContainer/Tabs/Audio/VBoxContainer/HBoxContainer"]
margin_top = 12.0
margin_right = 71.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Music"

[node name="MuSlider" type="HSlider" parent="Margin/VBoxContainer/Tabs/Audio/VBoxContainer/HBoxContainer"]
margin_left = 75.0
margin_top = 16.0
margin_right = 147.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_icons/grabber_highlight = ExtResource( 1 )
custom_icons/grabber = ExtResource( 1 )
min_value = -72.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Margin/VBoxContainer/Tabs/Audio/VBoxContainer"]
margin_top = 88.0
margin_right = 147.0
margin_bottom = 128.0
size_flags_vertical = 3

[node name="SFX" type="Label" parent="Margin/VBoxContainer/Tabs/Audio/VBoxContainer/HBoxContainer2"]
margin_top = 12.0
margin_right = 71.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SFX"
autowrap = true

[node name="SSlider2" type="HSlider" parent="Margin/VBoxContainer/Tabs/Audio/VBoxContainer/HBoxContainer2"]
margin_left = 75.0
margin_top = 16.0
margin_right = 147.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 2 )
custom_icons/grabber_highlight = ExtResource( 1 )
custom_icons/grabber = ExtResource( 1 )
min_value = -72.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Tabs" parent="Margin/VBoxContainer/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 23.0
margin_right = -5.0
margin_bottom = -5.0
script = ExtResource( 4 )

[node name="Save" type="Button" parent="Margin/VBoxContainer/Tabs/Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 219.0
margin_top = 112.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/VBoxContainer/Tabs/Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -91.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display" type="Tabs" parent="Margin/VBoxContainer/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 23.0
margin_right = -5.0
margin_bottom = -5.0
script = ExtResource( 7 )

[node name="HBox" type="HBoxContainer" parent="Margin/VBoxContainer/Tabs/Display"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.5
margin_top = -62.5
margin_right = 135.5
margin_bottom = 62.5
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Margin/VBoxContainer/Tabs/Display/HBox"]
margin_right = 169.0
margin_bottom = 125.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Margin/VBoxContainer/Tabs/Display/HBox/VBox"]
margin_right = 169.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = ExtResource( 6 )
text = "RESOLUTION"

[node name="Resolution" type="OptionButton" parent="Margin/VBoxContainer/Tabs/Display/HBox/VBox"]
margin_top = 20.0
margin_right = 73.0
margin_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "1920x1080"
flat = true
items = [ "1920x1080", null, false, 0, null, "1280x720", null, false, 1, null, "320x180", null, false, 2, null ]
selected = 0

[node name="Label2" type="Label" parent="Margin/VBoxContainer/Tabs/Display/HBox/VBox"]
margin_top = 44.0
margin_right = 169.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = ExtResource( 6 )
text = "FPS"

[node name="FPS" type="OptionButton" parent="Margin/VBoxContainer/Tabs/Display/HBox/VBox"]
margin_top = 64.0
margin_right = 38.0
margin_bottom = 84.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "60"
flat = true
items = [ "Unlimited", null, false, 0, null, "120", null, false, 1, null, "90", null, false, 2, null, "60", null, false, 3, null, "30", null, false, 4, null ]
selected = 3

[node name="VBox2" type="VBoxContainer" parent="Margin/VBoxContainer/Tabs/Display/HBox"]
margin_left = 173.0
margin_right = 271.0
margin_bottom = 125.0
size_flags_vertical = 5

[node name="Fullscreen" type="CheckButton" parent="Margin/VBoxContainer/Tabs/Display/HBox/VBox2"]
margin_right = 98.0
margin_bottom = 24.0
size_flags_horizontal = 0
text = "Fullscreen"
flat = true

[node name="Debug" type="CheckBox" parent="Margin/VBoxContainer/Tabs/Display/HBox/VBox2"]
margin_top = 28.0
margin_right = 98.0
margin_bottom = 52.0
text = "Debug Mode"
flat = true

[node name="Back" type="Tabs" parent="Margin/VBoxContainer/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 23.0
margin_right = -5.0
margin_bottom = -5.0

[connection signal="tab_changed" from="Margin/VBoxContainer/Tabs" to="." method="_on_TabContainer_tab_changed"]
[connection signal="value_changed" from="Margin/VBoxContainer/Tabs/Audio/VBoxContainer/HBoxContainer3/MSlider" to="." method="_on_MSlider_value_changed"]
[connection signal="value_changed" from="Margin/VBoxContainer/Tabs/Audio/VBoxContainer/HBoxContainer/MuSlider" to="." method="_on_MuSlider_value_changed"]
[connection signal="value_changed" from="Margin/VBoxContainer/Tabs/Audio/VBoxContainer/HBoxContainer2/SSlider2" to="." method="_on_SSlider_value_changed"]
[connection signal="pressed" from="Margin/VBoxContainer/Tabs/Controls/Save" to="Margin/VBoxContainer/Tabs/Controls" method="_on_Save_pressed"]
[connection signal="item_selected" from="Margin/VBoxContainer/Tabs/Display/HBox/VBox/Resolution" to="Margin/VBoxContainer/Tabs/Display" method="_on_Resolution_item_selected"]
[connection signal="item_selected" from="Margin/VBoxContainer/Tabs/Display/HBox/VBox/FPS" to="Margin/VBoxContainer/Tabs/Display" method="_on_FPS_item_selected"]
[connection signal="pressed" from="Margin/VBoxContainer/Tabs/Display/HBox/VBox2/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/Tabs/Display/HBox/VBox2/Debug" to="." method="_on_Debug_pressed"]
